apply transform scale for media and project pics, prevent overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     /* font-family: 'Abel', sans-serif; */
     font-family: 'Sunflower', sans-serif;
     /* font-family: 'Dosis', sans-serif; */
+    overflow-x: hidden;
+    overflow-y: visible;
 }
 
 a{
@@ -53,31 +55,38 @@ a{
 
 #about{
     position: relative;
-    top: 12vh;
+    top: 20vh;
     text-shadow: 2px 2px 2px white;
     grid-column: 2 / span 1;
     /* width: 75%; */
     padding: 5%;
     border-radius: 5%;
-    font-size: 1.7vw;
+    font-size: 25px;
     align-self: center;
     background-color: rgba(255, 255, 255, 0.4);
 }
 
 #media-container {
-    width: 25vw;
+    /* width: 25vw; */
     position: absolute;
+    right: 0;
     top:3vw;
-    left: 80vw;
+    /* left: 80vw; */
+    overflow: visible;
 }
 
 .media-pic{
     display: inline-block;
-    height: 5vw;
+    height: 75px;
     border-radius: 50%;
     margin: -1% -0.8%;
-    transition: all 0.5s ease;
+    transition: all 0.2s ease;
+
 } 
+
+.border:hover {
+    transform: scale(1.1, 1.1);
+}
 /* 
 .border:hover {
     height: 5.5vw;
@@ -85,24 +94,71 @@ a{
 
 .medrow {
     position: relative;
-    left: 2.2vw;
-    top: -0.28vw;
+    left: 35px;
+    top: -10px;;
 }
 
 .lowrow {
     position: relative;
-    top: -0.56vw; 
+    top: -20px; 
 }
 
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 1000px) { 
+    #header {
+        grid-template-columns: 27% 70% 3%;
+    }
+    #about{
+        top: 25vh;
+        font-size: 23px;
+    }
+
+    #media-container {
+        position: absolute;
+        top:5%;
+        right: 0;
+        overflow-x: hidden;
+    }
+
+
+}
+
+@media screen and (max-width: 700px) { 
+
     #header-back{
         /* display: none; */
-        width: 150vw;
+        overflow-x: hidden;
+        width: 100%;
         height: 100vh;
         background-image: url('./images/33.png');
         background-size: cover;
         /* background-repeat: no-repeat; */
     }
+    #header {
+        grid-template-columns: 10% 87% 3%;
+    }
+    #about{
+        top: 25vh;
+        font-size: 22px;
+    }
+
+    #media-container {
+        position: absolute;
+        top:5%;
+        right: -40px;
+        overflow-x: hidden;
+
+    }
+    
+}
+
+@media screen and (max-width: 600px) {
+
+    #app {
+        overflow: hidden;
+    }
+
+
     #header {
         /* background-image: url('./images/33.png');
         background-size: 200%;
@@ -113,32 +169,38 @@ a{
         padding: 12vw;
         grid-template-columns: 100%;
         grid-template-rows: 20% 80%;
+        overflow-x: hidden;
     }
 
     #about{
         position: relative;
-        top: 15vh;
+        top: 20vh;
         text-shadow: 2px 2px 2px white;
         grid-column: 1 / span 1;
         grid-row: 2 / span 1;
         /* width: 75%; */
         padding: 5%;
         border-radius: 5%;
-        font-size: 4.5vw;
+        font-size: 20px;
         align-self: center;
         background-color: rgba(255, 255, 255, 0.6);
     }
+
     #media-container {
-        width: 100vw;
+        /* width: 60%; */
+        overflow: hidden;
         position: absolute;
         top:5%;
-        left: 45%;
+        right: -40px;
+        /* left:40%; */
+
     }
     .media-pic{
         display: inline-block;
         height: 15vw;
         border-radius: 15%;
         margin: -1% ;
+        overflow-x: hidden;
     } 
 
     .medrow {
@@ -176,10 +238,12 @@ a{
     grid-template-columns: 40% 60%; */
     /* grid-template-rows: 100%; */
     /* border: 1px solid grey; */
+    overflow: visible;
 }
 
+/* @media screen and (max-width: 900px) { */
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
     #skills {
         display: none;
     } 
@@ -193,7 +257,7 @@ a{
     /* --unit: 12vw;
     width: var(--unit); */
     width: 2vw;
-    opacity: 0;
+    /* opacity: 0; */
     transition: opacity 0.5s ease, width 1s ease, margin 0.5s ease ;
     /* margin: calc(( var(--unit)/3.6)*(-1)); */
 }
@@ -231,29 +295,32 @@ a{
     width: 100vw;
     /* border: 1px solid grey; */
     padding: 5%;
+    /* padding-top: 7%; */
+    /* padding-top: 7%; */
     text-align: center;
     /* display: grid;
     grid-template-columns: 30% 30% 30; */
     /* grid-template-rows: 100%; */
+    overflow: visible;
 }
 .project-img{
     width: 25vw;
-    opacity: 0;
-    transition: all 1s ease; 
+    /* opacity: 0; */
+    transition: all 0.2s ease; 
+    overflow: visible;
 }
 
 .project-item {
     justify-self: center;
-    margin: -7vw 1vw;
+    margin: -7vw 1.2vw;
     display: inline-block;
     /* margin: 0;
     text-align: center; */
+    overflow: visible;
 }
 
 .project-img:hover {
-    position: relative;
-    top: -0.5vw;
-    left: -0.5vw;
+    transform: scale(1.1,1.1);
 }
 
 .shift {
@@ -270,11 +337,13 @@ a{
     line-height: 3vw;
     text-align: center;
     width: 26vw;
-    opacity: 0;
+    /* opacity: 0; */
     transition: all 1.5s ease; 
 }
 
-@media screen and (max-width: 800px) {
+/* @media screen and (max-width: 900px) { */
+
+@media screen and (max-width: 500px) {
     #portfolio {
         padding-top: 15vw;
     }
@@ -293,7 +362,7 @@ a{
     }
 
     .project-img{ 
-        opacity: 1;
+        /* opacity: 1; */
         width: 80vw;
         margin: 5% 0;
         z-index: 1;
@@ -320,7 +389,7 @@ a{
         line-height: 13vw;
         /* text-align: center; */
         width: 85vw;
-        opacity: 1;
+        /* opacity: 1; */
     }
 
     #background {
